--- a/package.json
+++ b/package.json
@@ -5,28 +5,43 @@
   "main": "server.js",
   "scripts": {
     "start": "node server/server.js",
+    "frontend" : "vite client",
     "server": "nodemon server/server.js",
-    "client": "npm start --prefix client"
+    "client": "npm run dev --prefix client",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "author": "Goblin Sharks",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "format": "prettier --write \"src/**/*.{js,jsx}\"",
+    "framer-motion": "^4.1.17",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.8.1"
+    "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
+    "mongoose": "^6.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-router-dom": "^6.5.0"
   },
   "devDependencies": {
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@vitejs/plugin-react": "^3.0.0",
     "nodemon": "^2.0.20",
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.8",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "vite": "^4.0.0"
   }
 }
