refactored startServer.js, server.js into server.js, app.js added forceExit flag to testing

--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "main": "server.js",
   "scripts": {
     "frontend": "vite client",
-    "backend": "nodemon server/startServer.js",
-    "client": "npm run dev --prefix client",
+    "backend": "nodemon server/server.js",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "jest --verbose"
+    "test": "jest --runInBand --forceExit --verbose"
   },
   "author": "Goblin Sharks",
   "license": "MIT",
