--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "backend": "nodemon server/server.js",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "jest --runInBand --forceExit --verbose"
+    "test": "NODE_ENV=test jest --runInBand --forceExit --verbose"
   },
   "author": "Goblin Sharks",
   "license": "MIT",
