--- a/package.json
+++ b/package.json
@@ -8,11 +8,24 @@
     "backend": "nodemon server/server.js",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "jest --runInBand --forceExit --verbose"
+    "test": "jest  --runInBand --forceExit --verbose"
   },
   "author": "Goblin Sharks",
   "license": "MIT",
+  "jest": {
+    "globalTeardown": "./jest-teardown.js",
+    "testEnvironment": "jest-environment-jsdom",
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest-setup.js"
+    ],
+    "moduleNameMapper": {
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js",
+      "\\.(jpg|jpeg|png|gif)$": "<rootDir>/__mocks__/fileMock.js"
+    }
+  },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/user-event": "^14.4.3",
     "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
@@ -31,18 +44,27 @@
     "react-router-dom": "^6.5.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@testing-library/react": "^13.4.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "babel-jest": "^29.3.1",
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.8",
     "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "jest-puppeteer": "^6.2.0",
     "mocha": "^10.2.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
+    "puppeteer": "^19.4.1",
+    "react-test-renderer": "^18.2.0",
+    "regenerator-runtime": "^0.13.11",
     "supertest": "^6.3.3",
     "vite": "^4.0.0"
   }
