--- a/package.json
+++ b/package.json
@@ -30,6 +30,12 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.5.0"
   },
+  "jest": {
+    "testEnvironment": "jest-environment-jsdom",
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-dom/extend-expect"
+    ]
+  },
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
